# android_external_raspberrypi-utils

./: .gitignore  CMakeLists.txt  build-android.sh
dtc/: Android.bp  CMakeLists.txt  util.c
dtc/libfdt/: Android.bp  CMakeLists.txt
dtmerge/: Android.bp  CMakeLists.txt  dtoverlay_main.c
pinctrl/: Android.bp  pinctrl.c
vcgencmd/: Android.bp
vclog/: Android.bp  vclog.c
vcmailbox/: Android.bp
